feat(tour-api): Optimization algorithm
